# Ts3Tools

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  premake5.lua
premake/: generateProjects.py
src/: GlobalDefinitions.cpp  GlobalDefinitions.h  Macros.h  Plugin.cpp  Plugin.h
src/base/channel/: Channel.cpp  Channel.h  ChannelList.cpp  ChannelList.h
src/base/client/: Client.cpp  Client.h  ClientList.cpp  ClientList.h
src/base/events/: Event.h  EventDispatcher.h
src/base/server/: Server.cpp  Server.h  ServerList.cpp  ServerList.h
src/core/: Core.h
src/core/channel/: Channel.cpp  Channel.h  ChannelList.cpp  ChannelList.h
src/core/client/: Client.cpp  Client.h  ClientList.cpp  ClientList.h
src/core/logger/: Logger.cpp  Logger.h
src/core/server/: Server.cpp  Server.h  ServerList.cpp  ServerList.h
src/logger/: Logger.cpp  Logger.h
src/util/: Random.cpp  Random.h  Util.cpp  Util.h
